[gd_scene load_steps=38 format=2]

[ext_resource path="res://Princess.gd" type="Script" id=1]
[ext_resource path="res://Characters/Princess/PNG/princess.png" type="Texture" id=2]
[ext_resource path="res://Characters/Princess/PNG/princess_hit_001.png" type="Texture" id=3]
[ext_resource path="res://Characters/Princess/PNG/princess_hit_002.png" type="Texture" id=4]
[ext_resource path="res://Characters/Princess/PNG/princess_run_001.png" type="Texture" id=5]
[ext_resource path="res://Characters/Princess/PNG/princess_run_002.png" type="Texture" id=6]
[ext_resource path="res://Characters/Princess/PNG/princess_run_003.png" type="Texture" id=7]
[ext_resource path="res://Characters/Princess/PNG/princess_run_004.png" type="Texture" id=8]
[ext_resource path="res://Characters/Princess/PNG/princess_run_005.png" type="Texture" id=9]
[ext_resource path="res://Characters/Princess/PNG/princess_run_006.png" type="Texture" id=10]
[ext_resource path="res://Characters/Princess/PNG/princess_run_007.png" type="Texture" id=11]
[ext_resource path="res://Characters/Princess/PNG/princess_run_008.png" type="Texture" id=12]
[ext_resource path="res://Characters/Princess/PNG/princess_crouch_001.png" type="Texture" id=13]
[ext_resource path="res://Characters/Princess/PNG/princess_crouch_002.png" type="Texture" id=14]
[ext_resource path="res://Characters/Princess/PNG/princess_walk_001.png" type="Texture" id=15]
[ext_resource path="res://Characters/Princess/PNG/princess_walk_002.png" type="Texture" id=16]
[ext_resource path="res://Characters/Princess/PNG/princess_walk_003.png" type="Texture" id=17]
[ext_resource path="res://Characters/Princess/PNG/princess_walk_004.png" type="Texture" id=18]
[ext_resource path="res://Characters/Princess/PNG/princess_walk_005.png" type="Texture" id=19]
[ext_resource path="res://Characters/Princess/PNG/princess_walk_006.png" type="Texture" id=20]
[ext_resource path="res://Characters/Princess/PNG/princess_walk_007.png" type="Texture" id=21]
[ext_resource path="res://Characters/Princess/PNG/princess_walk_008.png" type="Texture" id=22]
[ext_resource path="res://Characters/Princess/PNG/princess_jump_001.png" type="Texture" id=23]
[ext_resource path="res://Characters/Princess/PNG/princess_jump_002.png" type="Texture" id=24]
[ext_resource path="res://Characters/Princess/PNG/princess_jump_003.png" type="Texture" id=25]
[ext_resource path="res://Characters/Princess/PNG/princess_jump_004.png" type="Texture" id=26]
[ext_resource path="res://Characters/Princess/PNG/princess_attack_003.png" type="Texture" id=27]
[ext_resource path="res://Characters/Princess/PNG/princess_attack_002.png" type="Texture" id=28]
[ext_resource path="res://Characters/Princess/PNG/princess_attack_001.png" type="Texture" id=29]
[ext_resource path="res://Characters/Princess/PNG/princess_die_001.png" type="Texture" id=30]
[ext_resource path="res://Characters/Princess/PNG/princess_die_002.png" type="Texture" id=31]
[ext_resource path="res://Characters/Princess/PNG/princess_die_003.png" type="Texture" id=32]
[ext_resource path="res://Characters/Princess/PNG/princess_die_004.png" type="Texture" id=33]
[ext_resource path="res://Characters/Princess/PNG/princess_die_005.png" type="Texture" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "Die",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 8.3957

[sub_resource type="CapsuleShape2D" id=3]
radius = 10.9279
height = 8.78794

[node name="Princess" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
z_index = 1
collision_mask = 3
script = ExtResource( 1 )

[node name="PrincessSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Stop"
speed_scale = 0.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.543742, 1.49532 )
shape = SubResource( 2 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="DieTimer" type="Timer" parent="."]
wait_time = 1.8

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="PowerTimer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.36805, 1.84026 )
shape = SubResource( 3 )

[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_PowerTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
